--- a/task_responsive_web_design/practise margin padding transform/style.css
+++ b/task_responsive_web_design/practise margin padding transform/style.css
@@ -78,7 +78,6 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  perspective: 500px;
 }
 
 .box {
@@ -103,6 +102,7 @@
   }
 }
 
+/* 2D transform */
 .first {
   background-color: rgb(20, 90, 0);
   transition: all 0.5s ease 0s;
@@ -183,4 +183,89 @@
   75% {
     transform: scale(0.9) rotate(-90deg) translateX(-50px);
   }
+}
+
+/* 3D transform */
+.seventh {
+  background-color: rgb(65, 0, 90);
+  transition: all 0.5s ease 0s;
+}
+
+.seventh:hover {
+  transform: translate3d(10px, 10px, 10px);
+  background-color: rgb(90, 0, 125);
+}
+
+.eighth {
+  background-color: rgb(90, 65, 0);
+  transition: all 0.5s ease 0s;
+}
+
+.eighth:hover {
+  transform: scale3d(0.8, 0.8, 0.8);
+  background-color: rgb(125, 90, 0);
+}
+
+.nineth {
+  background-color: rgb(0, 90, 65);
+  transition: all 0.5s ease 0s;
+}
+
+.nineth:hover {
+  transform: rotate3d(1, 1, 1, 25deg);
+  background-color: rgb(0, 125, 90);
+}
+
+/* card */
+.flip__card {
+  margin: 0 auto;
+  position: relative;
+  width: 150px;
+  height: 150px;
+  transition: all 0.8s ease 0s;
+  transform-style: preserve-3d;
+}
+
+.card__front,
+.card__back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card__front {
+  z-index: 2;
+  transform: rotateY(0deg);
+
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.2;
+  color: white;
+  letter-spacing: 0.04em;
+
+  background-color: rgb(65, 0, 90);
+  border: 2px solid rgb(235, 235, 235);
+
+  backface-visibility: hidden;
+}
+
+.card__back {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.2;
+  letter-spacing: 0.04em;
+
+  transform: rotateY(-180deg);
+
+  background-color: rgba(65, 0, 90, 0.6);
+  border: 2px solid rgb(235, 235, 235);
+}
+
+.flip:hover .flip__card {
+  transform: rotateY(-180deg);
 }
