--- a/task_responsive_web_design/practise grid - 3 (Britlex Language School)/styles.css
+++ b/task_responsive_web_design/practise grid - 3 (Britlex Language School)/styles.css
@@ -25,6 +25,7 @@
   /* other */
   --email-form: #8F95A5;
   --footer-line: #C4C4C4;
+  --burger-line: #39515E;
 }
 
 /* -------------------------------------------------------------- */
@@ -120,6 +121,7 @@ html {
   }
 }
 
+/* menu */
 .nav__items {
   display: grid;
   grid-template: 1fr / repeat(5, auto);
@@ -186,12 +188,135 @@ html {
   border-color: var(--secondary-logo);
 }
 
+/* burger */
+.burger {
+  display: none;
+}
+
+@media (max-width: 992px) {
+  /* body.lock {
+    overflow: hidden;
+  } */
+
+  .header .nav__items,
+  .tel__link {
+    display: none;
+  }
+
+  .header {
+    grid-template: 50px / 90px 1fr;
+  }
+
+  .header .nav {
+    grid-column: 2 / 3;
+
+    display: grid;
+    grid-template: 1fr / 1fr;
+    justify-items: end;
+  }
+
+  .burger {
+    display: flex;
+    align-items: center;
+
+    position: relative;
+    width: 30px;
+    height: 19px;
+    z-index: 100;
+
+    cursor: pointer;
+  }
+
+  .burger::before,
+  .burger::after {
+    content: '';
+    left: 0;
+    position: absolute;
+
+    height: 3px;
+
+    background-color: var(--burger-line);
+    border-radius: 1px;
+
+    transition: all 0.15s linear 0s;
+  }
+
+  .burger::before {
+    top: 0;
+    width: 100%;
+  }
+
+  .burger::after {
+    bottom: 0;
+    width: 70%;
+  }
+
+  .burger__line {
+    position: absolute;
+    left: 0;
+
+    width: 100%;
+    height: 3px;
+
+    background-color: var(--burger-line);
+    border-radius: 1px;
+
+    transition: all 0.15s linear 0s;
+  }
+
+  .burger__line.active {
+    background-color: red;
+  }
+
+  /* .header .nav__items.active {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgb(35, 35, 35);
+
+    transition: all 0.3s ease 0s;
+    z-index: 40;
+
+    overflow: auto;
+  }
+
+  .header .nav__links.active {
+    top: 0;
+  }
+
+  .burger.active::before {
+    transform: rotate(45deg);
+    top: 0;
+  }
+
+  .burger.active::after {
+    transform: rotate(-45deg);
+    bottom: 0;
+  }
+
+  .burger.active {
+    transform: scale(0);
+  }
+
+  .position {
+    padding: 0 0 12px;
+    text-align: center;
+    width: 200px;
+    margin: 8px 0;
+    border-bottom: 2px solid white;
+  }
+
+  .nav__link {
+    font-size: 1.2em;
+  } */
+}
+
 /* -------------------------------------------------------------- */
 /* content */
 .main {
   grid-area: main;
 
-  /* height: 1000px; */
+  height: 1000px;
 }
 
 /* hero */
