--- a/task_responsive_web_design/practise grid - 3 (Britlex Language School)/styles.css
+++ b/task_responsive_web_design/practise grid - 3 (Britlex Language School)/styles.css
@@ -496,6 +496,17 @@ html {
 }
 
 /* hero */
+.hero {}
+
+.hero__header {}
+
+.hero__lamp {}
+
+.hero__text {}
+
+.tel__link {}
+
+.hero__girl {}
 
 /* skills */
 
