--- a/task_responsive_web_design/practise grid - 3 (Britlex Language School)/styles.css
+++ b/task_responsive_web_design/practise grid - 3 (Britlex Language School)/styles.css
@@ -498,11 +498,47 @@ html {
 .hero {
   position: relative;
 
+  padding-bottom: 62px;
   width: 100%;
-  height: 608px;
 
   display: grid;
   grid-template: 280px 168px 1fr / 30% 10.5% 1fr;
+}
+
+@media (max-width: 1580px) {
+  .hero {
+    grid-template: 262px 156px 1fr / 30% 10.5% 1fr;
+  }
+}
+
+@media (max-width: 1480px) {
+  .hero {
+    grid-template: 244px 144px 1fr / 30% 10.5% 1fr;
+  }
+}
+
+@media (max-width: 1380px) {
+  .hero {
+    grid-template: 226px 132px 1fr / 30% 10.5% 1fr;
+  }
+}
+
+@media (max-width: 1320px) {
+  .hero {
+    grid-template: 208px 120px 1fr / 30% 10.5% 1fr;
+  }
+}
+
+@media (max-width: 1200px) {
+  .hero {
+    grid-template: 190px 108px 1fr / 30% 10.5% 1fr;
+  }
+}
+
+@media (max-width: 1200px) {
+  .hero {
+    grid-template: 174px 98px 1fr / 30% 10.5% 1fr;
+  }
 }
 
 .hero__header {
@@ -513,6 +549,54 @@ html {
   font-size: 64px;
   line-height: 1.25;
   color: var(--primary-logo);
+}
+
+@media (max-width: 1580px) {
+  .hero__header {
+    font-size: 60px;
+  }
+}
+
+@media (max-width: 1480px) {
+  .hero__header {
+    font-size: 56px;
+  }
+}
+
+@media (max-width: 1380px) {
+  .hero__header {
+    font-size: 52px;
+  }
+}
+
+@media (max-width: 1320px) {
+  .hero__header {
+    font-size: 48px;
+  }
+}
+
+@media (max-width: 1280px) {
+  .hero__header {
+    font-size: 46px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .hero__header {
+    font-size: 44px;
+  }
+}
+
+@media (max-width: 1100px) {
+  .hero__header {
+    font-size: 42px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .hero__header {
+    font-size: 40px;
+  }
 }
 
 .hero__lamp {
@@ -533,19 +617,50 @@ html {
   font-size: 24px;
 }
 
+@media (max-width: 1580px) {
+  .hero__text {
+    font-size: 22px;
+  }
+}
+
+@media (max-width: 1480px) {
+  .hero__text {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 1320px) {
+  .hero__text {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .hero__text {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 1100px) {
+  .hero__text {
+    font-size: 15px;
+  }
+}
+
 .tel__link.hero {
   grid-column: 1 / 3;
   grid-row: 3 / 4;
+
+  padding: 0;
 
   width: 420px;
   height: 100px;
 
   display: grid;
-  grid-template: 1fr / 1fr;
+  grid-template: 100px / 1fr;
   align-items: center;
 
   font-size: 36px;
-  text-align: center;
   color: var(--bottoms-text);
 
   background-color: var(--bottoms-bg);
@@ -553,6 +668,62 @@ html {
   border-radius: 10px;
 
   transition: all 0.15s linear 0s;
+}
+
+@media (max-width: 1480px) {
+  .tel__link.hero {
+    width: 400px;
+    height: 96px;
+
+    grid-template: 96px / 1fr;
+
+    font-size: 32px;
+    color: var(--bottoms-text);
+
+    border-radius: 8px;
+  }
+}
+
+@media (max-width: 1380px) {
+  .tel__link.hero {
+    width: 360px;
+    height: 92px;
+
+    grid-template: 92px / 1fr;
+
+    font-size: 28px;
+    color: var(--bottoms-text);
+
+    border-radius: 8px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .tel__link.hero {
+    width: 300px;
+    height: 84px;
+
+    grid-template: 84px / 1fr;
+
+    font-size: 24px;
+    color: var(--bottoms-text);
+
+    border-radius: 6px;
+  }
+}
+
+@media (max-width: 1100px) {
+  .tel__link.hero {
+    width: 280px;
+    height: 80px;
+
+    grid-template: 80px / 1fr;
+
+    font-size: 22px;
+    color: var(--bottoms-text);
+
+    border-radius: 4px;
+  }
 }
 
 .tel__link.hero:hover,
