--- a/task_responsive_web_design/practise grid - 3 (Britlex Language School)/styles.css
+++ b/task_responsive_web_design/practise grid - 3 (Britlex Language School)/styles.css
@@ -494,6 +494,18 @@ html {
   padding-top: 56px;
 }
 
+@media (max-width: 992px) {
+  .main {
+    padding-top: 80px;
+  }
+}
+
+@media (max-width: 768px) {
+  .main {
+    padding-top: 68px;
+  }
+}
+
 /* hero */
 .hero {
   position: relative;
@@ -539,6 +551,31 @@ html {
 @media (max-width: 1100px) {
   .hero {
     grid-template: 174px 98px 1fr / 30% 10.5% 1fr;
+  }
+}
+
+@media (max-width: 992px) {
+  .hero {
+    padding-bottom: 48px;
+  }
+}
+
+@media (max-width: 900px) {
+  .hero {
+    grid-template: 156px 86px 1fr / 30% 10.5% 1fr;
+  }
+}
+
+@media (max-width: 810px) {
+  .hero {
+    grid-template: 144px 76px 1fr / 30% 10.5% 1fr;
+  }
+}
+
+@media (max-width: 768px) {
+  .hero {
+    padding-bottom: 56px;
+    grid-template: 144px 76px 1fr / 33% 15% 2% 50%;
   }
 }
 
@@ -600,6 +637,24 @@ html {
   }
 }
 
+@media (max-width: 900px) {
+  .hero__header {
+    font-size: 38px;
+  }
+}
+
+@media (max-width: 860px) {
+  .hero__header {
+    font-size: 36px;
+  }
+}
+
+@media (max-width: 810px) {
+  .hero__header {
+    font-size: 34px;
+  }
+}
+
 .hero__lamp {
   grid-column: 2 / 3;
   grid-row: 1 / 2;
@@ -609,6 +664,14 @@ html {
   right: 0;
   width: 80%;
   height: auto;
+}
+
+@media (max-width: 768px) {
+  .hero__lamp {
+    top: 42%;
+    left: 0;
+    width: 66%;
+  }
 }
 
 .hero__text {
@@ -648,6 +711,24 @@ html {
   }
 }
 
+@media (max-width: 900px) {
+  .hero__text {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 860px) {
+  .hero__text {
+    font-size: 13px;
+  }
+}
+
+@media (max-width: 810px) {
+  .hero__text {
+    font-size: 12px;
+  }
+}
+
 .tel__link.hero {
   grid-column: 1 / 3;
   grid-row: 3 / 4;
@@ -679,7 +760,6 @@ html {
     grid-template: 96px / 1fr;
 
     font-size: 32px;
-    color: var(--bottoms-text);
 
     border-radius: 8px;
   }
@@ -693,9 +773,6 @@ html {
     grid-template: 92px / 1fr;
 
     font-size: 28px;
-    color: var(--bottoms-text);
-
-    border-radius: 8px;
   }
 }
 
@@ -707,7 +784,6 @@ html {
     grid-template: 84px / 1fr;
 
     font-size: 24px;
-    color: var(--bottoms-text);
 
     border-radius: 6px;
   }
@@ -721,9 +797,53 @@ html {
     grid-template: 80px / 1fr;
 
     font-size: 22px;
-    color: var(--bottoms-text);
 
     border-radius: 4px;
+  }
+}
+
+@media (max-width: 992px) {
+  .tel__link.hero {
+    width: 292px;
+
+    font-size: 24px;
+
+    border-radius: 6px;
+  }
+}
+
+@media (max-width: 900px) {
+  .tel__link.hero {
+    width: 280px;
+    height: 76px;
+
+    grid-template: 76px / 1fr;
+
+    font-size: 22px;
+
+    border-radius: 4px;
+  }
+}
+
+@media (max-width: 810px) {
+  .tel__link.hero {
+    width: 256px;
+    height: 68px;
+
+    grid-template: 68px / 1fr;
+
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 768px) {
+  .tel__link.hero {
+    width: 236px;
+    height: 64px;
+
+    grid-template: 64px / 1fr;
+
+    font-size: 18px;
   }
 }
 
@@ -749,6 +869,14 @@ html {
   right: 0;
   width: 84%;
   height: auto;
+}
+
+@media (max-width: 768px) {
+  .hero__girl {
+    grid-column: 4 / 5;
+
+    width: 100%;
+  }
 }
 
 /* skills */
