Первинна розмітка заревшена.
Попередньо розмічені наступні розділи сайту:
- Skills
- About Us
- Pricing
- Contact Us

--- a/task_responsive_web_design/practise grid - 3 (Britlex Language School)/styles.css
+++ b/task_responsive_web_design/practise grid - 3 (Britlex Language School)/styles.css
@@ -995,6 +995,15 @@ html {
   height: auto;
 }
 
+@media (min-width: 1700px) {
+  .hero__girl {
+    width: 720px;
+    height: 560px;
+
+    right: 5%;
+  }
+}
+
 @media (max-width: 992px) {
   .hero__girl {
     width: 88%;
